Added win condition

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
     <p>Wins: <span class="wins">0</span></p> 
     <p>Losses: <span class="losses">0</span></p>
-    <p>Guesses Left: <span class="guesses">0</span></p>
-    <p>Your Guesses so far: <span class="yourguess">0</span></p>   
+    <p>Guesses Left: <span class="guesses">9</span></p>
+    <p>Your Guesses so far: <span class="yourguess"></span></p>
+    
+    <script src="assets/javascript/game.js"></script>
 </body>
 </html>
